# gameboy_emulator

./: CMakeLists.txt  README.md  main.cpp
include/: bus.h  cartridge.h  clock.h  emulator.h  gamepad.h  ppu.h
src/: cartridge.cpp  gamepad.cpp
